# tictactoe-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build-and-test.yml  cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp  tictactoe.cpp  tictactoe.h
test/: tictactoe_test.cpp
tests/: CMakeLists.txt  tictactoe_test.cpp
